--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+    font-family: 'light';
+    src: url('../public/fonts/Poppins-Light.ttf');
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+    font-family: 'regular';
+    src: url('../public/fonts/Poppins-Regular.ttf');
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@font-face {
+    font-family: 'medium';
+    src: url('../public/fonts/Poppins-Medium.ttf');
+}
+
+@font-face {
+    font-family: 'bold';
+    src: url('../public/fonts/Poppins-Bold.ttf');
+}
+
+@font-face {
+    font-family: 'sregular';
+    src: url('../public/fonts/Silkscreen-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'sbold';
+    src: url('../public/fonts/Silkscreen-Bold.ttf');
+}
+
+@font-face {
+    font-family: 'plight';
+    src: url('../public/fonts/Prompt-Light.ttf');
+}
+
+@font-face {
+    font-family: 'pregular';
+    src: url('../public/fonts/Prompt-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'pmedium';
+    src: url('../public/fonts/Prompt-Medium.ttf');
+}
+
+@font-face {
+    font-family: 'pbold';
+    src: url('../public/fonts/Prompt-Bold.ttf');
 }
